# tauri-image-viewer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  ImageViewerWindow.tsx  imageViewer.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  file_system.rs  image_processing.rs  main.rs  models.rs  utils.rs
src/components/: ExpandedImage.tsx  FolderTree.tsx  ImageGrid.tsx  ImageViewer.tsx  SortControls.tsx
src/utils/: logger.ts
