[package]
name = "tauri-image-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "api-all"] }
image = "0.24"
base64 = "0.21"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"


[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
