[package]
name = "tauri-image-viewer"
version = "0.1.0"
edition = "2021"
exclude = ["tests/resources/*"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "api-all"] }
image = { version = "0.24", features = ["webp"] }
base64 = "0.21"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
